<resources>
    <string name="app_name">Court Counter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="team_a">Team A</string>
    <string name="score">0</string>
    <string name="team_b">Team B</string>
    <string name="three_point">+3 POINTS</string>
    <string name="two_point">+2 POINTS</string>
    <string name="free_throw">FREE THROW</string>
    <string name="button_reset">RESET</string>
</resources>
